# rag-model-training

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  typos.toml
.github/workflows/: ci.yml
adaptive_rag/: README.md  train_adaptive_rag.py  train_adaptive_rag_config.yaml
agentic_rag/: prepare_data.py  search_module.py  train.py  training_config.yaml
corrective_rag/: README.md  requirements.txt  train_corrective_rag.py
rezero_agentic_rag/: evaluation.py  prepare_data_config.yaml  prompts.py  search_module.py  tokenizer_adapter.py
rq_rag/: train_rq_rag.py
self_rag/: README.md  critic_data_processor.py  critic_evaluator.py  critic_groundness_collector.py  critic_relevance_collector.py  critic_retrieval_collector.py  critic_utility_collector.py  critic_utility_config.yaml  generator_data_preparation.py  generator_data_preparation_config.yaml  process_earnings_call_data.py  process_earnings_call_data_config.yaml  train_critic.py  train_generator.py  train_generator_config.yaml
self_rag/retriever/: beir_utils.py  contriever.py  data.py  dist_utils.py  evaluation.py  finetuning_data.py  inbatch.py  index.py  moco.py  normalize_text.py  options.py  retrieval_utils.py  slurm.py  utils.py
src/rag_model_training/adaptive_rag/: README.md  requirements.txt  train.json  train_adaptive_rag.py  train_adaptive_rag_config.yaml
src/rag_model_training/agentic_rag/: README.md  evaluation.py  inference.py  inference_config.yaml  prepare_data.py  prepare_data_config.yaml  prompts.py  rewards.py  rl_helpers.py  search_module.py  training_config.yaml  unsloth_grpo_trainer_agent.py
src/rag_model_training/corrective_rag/: train_corrective_rag.py  train_corrective_rag_config.yaml
src/rag_model_training/rezero_agentic_rag/: README.md  agent.py  config.py  evaluation.py  prepare_data.py  prepare_data_config.yaml  prompts.py  rewards.py  search_module.py  tokenizer_adapter.py  train.py  train_grpo.py  unsloth_grpo_trainer_agent.py
src/rag_model_training/rq_rag/: train_rq_rag.py
src/rag_model_training/self_rag/: README.md  critic_data_config.yaml  critic_data_processor.py  critic_evaluator.py  critic_groundness_collector.py  critic_groundness_config.yaml  critic_relevance_collector.py  critic_relevance_config.yaml  critic_retrieval_collector.py  critic_retrieval_config.yaml  critic_utility_collector.py  generator_data_preparation.py  generator_data_preparation_config.yaml  process_earnings_call_data.py  process_earnings_call_data_config.yaml  requirements.txt  train_critic.py  train_critic_config.yaml  train_generator.py  train_generator_config.yaml
src/rag_model_training/self_rag/retriever/: beir_utils.py  contriever.py  data.py  dist_utils.py  evaluation.py  finetuning_data.py  inbatch.py  index.py  moco.py  normalize_text.py  options.py  retrieval_utils.py  slurm.py  utils.py
